[tool.poetry]
name = "cloudflare-automation"
version = "0.1.0"
description = ""
authors = ["d-saurabh <saurabhdeshpande49@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pulumi = "^3.115.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
